# Universal-Decay-Law

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run.py
config/: __init__.py  settings.py
dashboard/: index.html  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css  vite-env.d.ts
dashboard/src/api/: client.ts
dashboard/src/components/charts/: CollapseChart.tsx  DeviantsChart.tsx  RawCurvesChart.tsx  ScalingChart.tsx  index.ts
dashboard/src/pages/: AnalysisPage.tsx  DatasetsPage.tsx  SettingsPage.tsx  TrialDetailPage.tsx  TrialsPage.tsx
dashboard/src/types/: index.ts
database/: __init__.py  connection.py  crud.py  models.py
src/: __init__.py
src/analysis/: __init__.py  causal.py  fitting.py  motivation.py  network.py  phases.py  prediction.py  preprocessing.py  statistics.py  survivorship.py  universality.py  validation.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  analysis.py  datasets.py  trials.py  visualization.py
src/models/: __init__.py  base.py  double_exponential.py  mechanistic.py  motivation.py  power_law.py  stretched_exponential.py  weibull.py
src/visualization/: __init__.py  figures.py  interactive.py  style.py
tests/: __init__.py  test_analysis.py  test_models.py
